--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHIMER AI</title>
   </head>
-  <script>
+  <!-- <script>
     function setVh() {
       // Calculate 1vh in pixels
       const vh = window.innerHeight * 0.01;
@@ -19,9 +19,9 @@
 
     // Recalculate on window resize
     window.addEventListener("resize", setVh);
-  </script>
+  </script> -->
   <body>
-    <div id="root" class="full-height"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
